--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PROYECTO_1_JV_NC</name>
+	<name>PROYECTO_2_JV_NC2</name>
 	<comment></comment>
 	<projects>
 	</projects>
